# intro-to-quantum-computing

./: README.md  flake.nix  pyproject.toml
problem_assignments/0.1 Introduction to Imaginary and Complex Numbers/: __main__.py
problem_assignments/0.2 Complex Numbers on the Number Plane Problem Set/: __main__.py
problem_assignments/0.3 Introduction to Matrices/: __main__.py
problem_assignments/0.4 Matrix Multiplication to Transform a Vector/: __main__.py
problem_assignments/0.5 Unitary and Hermitian Matrices/: __main__.py
problem_assignments/0.6 Eigenvectors and Eigenvalues/: __main__.py
problem_assignments/1.1 Introduction to the Qubit and Superposition/: __main__.py
problem_assignments/1.2 Introduction to Dirac Notation/: __main__.py
problem_assignments/1.3 Representing a Qubit on the Bloch Sphere/: __main__.py
problem_assignments/1.4 Manipulating a Qubit with Single Qubit Gates/: __main__.py
problem_assignments/1.5 Introduction to Phase/: __main__.py
problem_assignments/1.6 The Hadamard Gate and the |+⟩, |−⟩, |i⟩ and |−i⟩ states/: __main__.py
problem_assignments/1.7 The Phase Gates (S and T Gates)/: __main__.py
problem_assignments/2.1 Mathematical Representation of Multiple Qubits/: __main__.py
problem_assignments/2.2 Introduction to Quantum Circuits/: __main__.py
problem_assignments/2.3 Multi-Qubit Gates: CNOT, Toffoli, Controlled Gates/: __main__.py
problem_assignments/2.4 Measuring Singular Qubits/: __main__.py
problem_assignments/2.5 Quantum Entanglement and the Bell States/: __main__.py
(+5 files in other folders)
