[tool.poetry]
name = "intro-to-quantum-computing"
version = "0.1.0"
description = ""
authors = ["YawKar <yawkarpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
