[tool.poetry]
name = "intro-to-quantum-computing"
version = "0.1.0"
description = ""
authors = ["YawKar <yawkarpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
qutip = "^5.0.2"
qiskit = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
typeCheckingMode = "strict"
verboseOutput = true

